# InfamousEngine

./: .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  GenerateVsProject.bat  vcpkg.json
CMake/: BuildSystem.cmake  Utils.cmake
InfamousEngine/RHI/: CMakeLists.txt
InfamousEngine/Utils/Json/: CMakeLists.txt
InfamousEngine/WindowSystem/: CMakeLists.txt  Window.h
Samples/: CMakeLists.txt  main.cpp
Samples/Sample1/: main.cpp
Source/ECS/: CMakeLists.txt
Source/ECS/Source/ECS/: Component.cpp  Component.h  ECSStorage.cpp  ECSStorage.h  Entity.cpp  Entity.h
Source/Engine/: CMakeLists.txt
Source/Engine/Cmd/: ConsoleArgs.cpp  ConsoleArgs.h
Source/Engine/Engine/: Engine.cpp  Engine.h  IGameLoop.cpp  IGameLoop.h
Source/Engine/Source/InfamousEngine/: Engine.cpp  Engine.h
Source/Engine/Source/InfamousEngine/Components/: Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h
Source/Engine/Source/InfamousEngine/Console/: CommandArgsStorage.cpp  CommandArgsStorage.h
Source/Engine/Source/UnknownEngine/: Engine.cpp  Engine.h
Source/FileSystem/: CMakeLists.txt
Source/FileSystem/Source/FileSystem/: FileSystem.cpp  FileSystem.h
Source/FileSystem/Source/FileSystem/FileStream/: IFileStream.cpp  IFileStream.h  InputFileStream.cpp  InputFileStream.h  OutputFileStream.cpp  OutputFileStream.h
Source/Graphics/GlfwWindow/: CMakeLists.txt
Source/Graphics/GlfwWindow/GlfwWindow/: GlfwWindow.cpp  GlfwWindow.h
Source/Graphics/RHI/: CMakeLists.txt
Source/Graphics/RHI/RHI/: RHI.h
Source/Graphics/RHI/RHI/RenderTarget/: IRenderBindable.cpp  IRenderBindable.h  RenderTarget.h
Source/Graphics/RHI/RHI/Resource/: VRamBuffer.cpp  VRamBuffer.h  VRamResource.cpp  VRamResource.h
Source/Graphics/RHI/RHI/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  UniformVariant.h
Source/Graphics/WindowSystem/: CMakeLists.txt
Source/Graphics/WindowSystem/WindowSystem/: IWindow.cpp  IWindow.h  WindowParams.h
Source/Graphics/WindowSystem/WindowSystem/UserInput/: IInputHandler.cpp  IInputHandler.h  InputManager.cpp  InputManager.h  Keys.h
Source/Logger/: CMakeLists.txt
Source/Logger/Source/Logger/: LogOutputDevice.cpp  LogOutputDevice.h  Logger.cpp  Logger.h
Source/OpenglWrap/: CMakeLists.txt
Source/OpenglWrap/Source/OpenglWrap/: Opengl.cpp  Opengl.h
Source/OpenglWrap/Source/OpenglWrap/Buffers/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  DataPtr.cpp  DataPtr.h
Source/OpenglWrap/Source/OpenglWrap/Graphics/Buffers/: Buffer.h  BufferLayout.cpp
Source/OpenglWrap/Source/OpenglWrap/Graphics/Materials/: IMaterial.h  Texture2dMaterial.h
Source/OpenglWrap/Source/OpenglWrap/Graphics/Rendering/: Object.h  OpenglRender.cpp
Source/OpenglWrap/Source/OpenglWrap/Graphics/Shading/: Shader.cpp  ShaderPart.cpp  Uniform.h
Source/OpenglWrap/Source/OpenglWrap/Shaders/: Shader.cpp  Shader.h  ShaderManager.h  ShaderPart.cpp  ShaderPart.h  ShaderProgram.cpp  ShaderProgram.h  ShaderResource.cpp  ShaderResource.h  ShaderType.h  Uniform.h
Source/OpenglWrap/Source/OpenglWrap/System/: SystemManager.h
Source/OpenglWrap/Source/OpenglWrap/Texture/: Texture2d.cpp  Texture2d.h  TextureManager.cpp  TextureManager.h  TextureResource.cpp  TextureResource.h
Source/OpenglWrap/Source/OpenglWrap/Utils/: CerealTypes.h  ShaderLoader.cpp  ShaderLoader.h
Source/Rendering/: CMakeLists.txt
Source/Rendering/Source/InfamousEngine/: RenderManager.cpp  RenderManager.h
Source/Rendering/Source/InfamousEngine/Components/: RenderComponent.cpp  RenderComponent.h  RenderableComponent.cpp  RenderableComponent.h
Source/ResourceManager/: CMakeLists.txt
Source/ResourceManager/ResourceManager/: ResourceManager.cpp  ResourceManager.cpp~  ResourceManager.h
Source/ResourceManager/Source/ResourceManager/: Resource.cpp  Resource.h  ResourceHandler.cpp  ResourceHandler.h  ResourceManager.cpp  ResourceManager.h
Source/ResourceManager/Source/ResourceManager/Resources/: IResource.cpp  IResource.h  JsonResource.cpp  JsonResource.h  Resource.h
Source/Time/: CMakeLists.txt
Source/Time/Time/: Time.cpp  Time.h  Timeline.cpp  Timeline.h  Timer.h  Types.h
Source/Utility/: CMakeLists.txt
Source/Utils/: CMakeLists.txt
Source/Utils/Json/: CMakeLists.txt
Source/Utils/Json/Json/Serializable/: IJsonable.h
Source/Utils/Json/Serializable/: IJsonable.cpp
Source/Utils/ResourceManager/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Source/Utils/Serialization/: CMakeLists.txt
Source/Utils/Serialization/Serialization/: Config.cpp  Config.h  ISerializable.h
Source/Utils/Serialization/Serialization/Stream/: BinaryFormatter.cpp  BinaryFormatter.h  FileStream.cpp  FileStream.h  IStream.cpp  IStream.h  StreamFormatter.cpp  StreamFormatter.h
Source/Utils/Time/: CMakeLists.txt
Source/Utils/Time/Time/: Time.h  Timeline.cpp  Timeline.h  Timer.h  Types.h
Source/Utils/Utils/: CMakeLists.txt
Source/Utils/Utils/Containers/: DenseTree.h
Source/Utils/Utils/Filesystem/: FileSystem.cpp  FileSystem.h  Path.cpp  Path.h
Source/Utils/Utils/Utils/Containers/: BitArray.cpp  BitArray.h  DenseTree.cpp  SparseArray.cpp  SparseArray.h
Source/WindowSystem/: CMakeLists.txt  IWindow.cpp  IWindow.h  WindowParams.h
Source/WindowSystem/Impl/: WIndow.cpp  Window.h
Source/WindowSystem/Source/WindowSystem/: GameWindow.cpp  GameWindow.h  Opengl.cpp  Opengl.h
Source/WindowSystem/Source/WindowSystem/Input/: InputManager.cpp  InputManager.h
Source/WindowSystem/Source/WindowSystem/System/ImGui/: ImGuiSystem.cpp  ImGuiSystem.h
Source/WindowSystem/Source/WindowSystem/Windows/: GameWindow.cpp  GameWindow.h  IWindow.h  ServerInvisibleWindow.cpp  ServerInvisibleWindow.h
Source/WindowSystem/WindowSystem/: IWindow.cpp  IWindow.h  IWindowUpdateLoop.cpp  IWindowUpdateLoop.h  WindowParams.h
Source/WindowSystem/WindowSystem/Impl/: WIndow.cpp  Window.h
Test/: CMakeLists.txt
Test/Assets/: resources.json  shaderProgram.json
Test/Assets/Shaders/: default.vsh
Test/Source/: main.cpp
Tests/: CMakeLists.txt
Tests/ResourceManager/: CMakeLists.txt  main.cpp
(+12 files in other folders)
